# causal-shap-target-dags

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  pyproject.toml
.github/workflows/: publish-site.yml  python-tests.yml
analysis/: 01_generate_clean.R  02_generate_nasa_like.R  03_validate_and_plot_dags.R  04_generate_source_aligned_clean.R  05_generate_source_aligned_nasa_like.R  06_compute_interventional_truth.R  07_run_shap_comparison.R  08_bootstrap_shap_comparison.R  09_diagnose_predictive_signal.R  10_ingest_robert_dags.R  README.md  generate.R  install_dependencies.R  run_all.R  validate_outputs.R
analysis/R/: dag_concordance.R  paths.R  renal_stone_simcausal.R  renal_stone_source_aligned_simcausal.R  shap_distance_metrics.R
app/: README.md  app.py  requirements-build.txt  requirements.txt  run_app.bat
app/assets/: glossary.json
app/bundles/: analysis_output_baseline_hashes.json  manifest.json
dag-candidates/: renal-stone-core-edges.csv  renal-stone-core-nodes.csv
demo-production/: README.md  prop-manifest.md  python-app-plan.md  video-script.md
docs/: ACIC_LINEAGE.md  DATA_PROVENANCE.md  DEMO_GUIDE.md  LIMITATIONS.md  METHODS.md  PROJECT_NARRATIVE.md  README.md  REPRODUCIBILITY.md  RESEARCH_REFERENCES.md  RESULTS.md  ROADMAP.md  ROBERT_REYNOLDS_DAGS_2026-07-13.md  SITE_INTEGRATION_GUIDE.md
references/: renal-stone-dag-code-SA-07566.txt
site/: _quarto.yml  about.qmd  app.js  app.qmd  evidence.qmd  glossary.qmd  index.qmd  reproducibility.qmd  research-lineage.qmd  styles.css  theme.scss  why-it-happens.qmd
(+130 files in other folders)
